# vitess-rag

./: .env.example  .gitignore  README.md  data  pyproject.toml
data/: filter.md  guide.md  monitor.md  read_in.md  writeout.md
src/vitess_rag/: __init__.py  __main__.py  agent.py  chroma.py  embeddings.py  io.py  markdown_rendering.py  models.py  parser.py  retrieval.py  table_parser.py  text_utils.py  tools.py
tests/: test_agent.py  test_chroma.py  test_embeddings.py  test_parser.py  test_retrieval.py
