[project]
name = "vitess-rag"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
version = "0.1.0"
description = "RAG package for VITESS Markdown documentation"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "chromadb>=0.6.0",
    "langchain>=0.3.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vitess_rag"]
