[project]
name = "vitess-rag"
version = "0.1.0"
description = "RAG system for VITESS documentation using Chroma and LangChain"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "chromadb>=0.6.0",
    "openai>=1.0.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
    "markdown-it-py>=3.0.0",
    "pydantic>=2.0.0"
]

# This makes the CLI command work
[project.scripts]
vitess-rag = "vitess_rag.__main__:main"

# Build system (this is where hatchling comes in)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Telling hatch where my code lives
[tool.hatch.build.targets.wheel]
packages = ["src/vitess_rag"]
