[project]
name = "vitess-rag"
version = "0.1.0"
description = "RAG system for VITESS documentation using Chroma and LangChain"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "chromadb>=1.5.8",
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "markdown-it-py>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "ipython",
]

# This makes the CLI command work
[project.scripts]
vitess-rag = "vitess_rag.__main__:main"

# Build system (this is where hatchling comes in)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Telling hatch where my code lives
[tool.hatch.build.targets.wheel]
packages = ["src/vitess_rag"]
